fixed overflow

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body{
 	background: rgba(255, 255, 255, 0.9);
 	border: 3px solid rgba(55, 12, 12, 0.25);
 	border-radius: 5px;
-		
+	overflow-x:hidden;
 }
 
 #chat-log{
